--- a/TODO
+++ b/TODO
@@ -125,4 +125,4 @@ Para que el efecto cascada funcione tenés que definir así las relaciones en la
 "In fact, the relationship.backref keyword is only a common shortcut for placing a second relationship() onto the Address mapping, including the establishment of an event listener on both sides which will mirror attribute operations in both directions."
 
 Arreglar -> Las tags no se cargan por el problema de categorías, (creo que se soluciona usando el efecto cascade)
-
+Reducir el número de publicaciones cada vez que se borra un post.
