--- a/TODO
+++ b/TODO
@@ -130,3 +130,6 @@ Hacer un uploads de files como 8kun, 4chan.
 No permitir mútliples agradecimientos a usuarios, debería ser uno por día.
 Cuando vas a subir una imágen, no la tenés que subir con el nombre original, tenés que subirla con el nombre de la hora o algo parecido y guardar la 
 extensión por separado en la db.
+
+
+Tengo que aprender a migrar la db.
