--- a/TODO
+++ b/TODO
@@ -130,6 +130,11 @@ Hacer un uploads de files como 8kun, 4chan.
 No permitir mútliples agradecimientos a usuarios, debería ser uno por día.
 Cuando vas a subir una imágen, no la tenés que subir con el nombre original, tenés que subirla con el nombre de la hora o algo parecido y guardar la 
 extensión por separado en la db.
+Tengo que borrar todas las imágenes cada vez que se borra un post, tengo que generar nombre randoms
+para las imágenes tengo que hacer que cada vez que clickea en una imágen se expanda la imágen en la
+misma página con js, no que te lo abra en una pestaña aparte.
+Tengo que verificar que si el usuario ya está logueado no te permita acceder a /login y a /register.
+Agregar la función de YouTube embed.
 
 
 Tengo que aprender a migrar la db.
