--- a/TODO
+++ b/TODO
@@ -160,3 +160,4 @@ Cuando subís una imágen en Comment también deberías generar un nombre
 random de archivo, cosa que no lo estoy haciendo, sólo copia lo que hiciste
 en el anterior, sólo copia lo que hiciste
 No permitir buscar en blanco.
+Si al buscador le pasas otra variable se bugea el programa lol.
