--- a/TODO
+++ b/TODO
@@ -161,3 +161,4 @@ random de archivo, cosa que no lo estoy haciendo, sólo copia lo que hiciste
 en el anterior, sólo copia lo que hiciste
 No permitir buscar en blanco.
 Si al buscador le pasas otra variable se bugea el programa lol.
+Cambiar id collapseExample en home.html xd
