--- a/TODO
+++ b/TODO
@@ -164,3 +164,6 @@ Si un posteo tiene demasiadas denuncias debería mandarme un correo, y ocultar l
 Establecer un min-height a las cartas.
 Al publicar una imagen dar más datos de esta, como 4chan.
 Tabla con un modal onclick
+En la primera página solo listar las categorías como cualquier chan 
+Agregar Disclaimer: this post and the subject matter and contents thereof - text, media, or otherwise - do not necessarily reflect the views of the 8kun administration en cada publicación y comentario pero en espaoñll.
+cambiar el directorio en donde el usuario sube imágenes.
