--- a/TODO
+++ b/TODO
@@ -167,3 +167,4 @@ Tabla con un modal onclick
 En la primera página solo listar las categorías como cualquier chan 
 Agregar Disclaimer: this post and the subject matter and contents thereof - text, media, or otherwise - do not necessarily reflect the views of the 8kun administration en cada publicación y comentario pero en espaoñll.
 cambiar el directorio en donde el usuario sube imágenes.
+Ssitema anti flood en todos lados.
